sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: type mismatch;
 found   : Unit
 required: Boolean
while (inverse=true)
              ^AlgBubbleSort1:7: error: not found: value fals
	inverse=fals
                ^